2007-05-17  Ulrich Drepper  <drepper@redhat.com>

	Dummy files to prevent stub versions from being used.
	* sysdeps/x86_64/fpu/k_cosl.c: New file.
	* sysdeps/x86_64/fpu/k_rem_pio2l.c: New file.
	* sysdeps/x86_64/fpu/k_sinl.c: New file.
	* sysdeps/x86_64/fpu/k_tanl.c: New file.

	* version.h (VERSION): Set to 2.6.90.

2007-05-14  Ulrich Drepper  <drepper@redhat.com>

	* version.h (VERSION): Define to 2.6.
	* include/features.h (__GLIBC_MINOR__): Define to 6.

	* malloc/malloc.c: Use all small bin slots on 64-bit archs.

	* malloc/malloc.c (largebin_index): Really have 32 buckets with 64
	sizes.

2007-05-13  Ulrich Drepper  <drepper@redhat.com>

	* malloc/malloc.c [MALLOC_DEBUG]: Keep track of current maximum
	number of mmaps.  n_mmaps_max is the target.
	* malloc/hooks.c: Likewise.
	* malloc/arena.c: Likewise.

2007-05-12  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/tst-getcpu.c: Include <unistd.h> for
	getpid.

2007-05-11  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-close.c (_dl_close_worker): Help gcc to optimize by
	adding new variables.

	* elf/dl-open.c (add_to_global): Introduce variable ns to help gcc
	optimize.  Completely extend global scope array before making the
	new entries visible.

2007-05-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/tst-getcpu.c: New file.
	* sysdeps/unix/sysv/linux/Makefile [subdir=posix] (tests): Add
	tst-getcpu.

	* include/link.h: Move l_version and l_nversion members around to
	fill gaps.

	* scripts/check-c++-types.sh: Don't use -fnu89-inline option.

	* sysdeps/unix/sysv/linux/sched_setaffinity.c
	(__sched_setaffinity_new): If syscall was successful and
	RESET_VGETCPU_CACHE is defined, use it before returning.
	* sysdeps/unix/sysv/linux/x86_64/sched_setaffinity.c: New file.

	* io/sys/stat.h: Make sure struct timespec is defined for
	__USE_ATFILE.

	* sysdeps/unix/sysv/linux/powerpc/bits/stat.h: Define UTIME_NOW and
	UTIME_OMIT.
	* sysdeps/unix/sysv/linux/x86_64/bits/stat.h: Likewise.